hand-detail ui component impl. Api extended. Backend adjusted accordingly.
